--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -4,19 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
     <title>Page 2</title>
     <link rel="stylesheet" href="./css/timer.css" />
   </head>
   <body>
     <section>
       <a href="./index.html">Go to home</a>
-      <h1>Welcome to page 2</h1>
+      <h1>Timer is done</h1>
     </section>
     <div class="form-container">
-      <input type="text" id="datetime-picker" class="form-input" />
-      <button type="button" data-start class="form-button" disabled>
-        Start
-      </button>
+      <div class="time-input-button">
+        <input type="text" id="datetime-picker" class="form-input" />
+        <button type="button" data-start class="form-button" disabled>
+          Start
+        </button>
+      </div>
 
       <div class="timer">
         <div class="field">
